# Video-Highlight-Skill

./: .gitignore  CLAUDE.md  PLAN.md
video-highlight-skill/: .clawhubignore  .gitignore  README.md  SKILL.md  pyproject.toml
video-highlight-skill/evaluation/: EVALUATION_PLAN.md  INDUSTRY_SURVEY.md  evaluator.py  llm_judge.py  report.py  runner.py
video-highlight-skill/evaluation/test_cases/local/: cases.yaml
video-highlight-skill/evaluation/test_cases/local/case_001/: instruction.json  metadata.yaml
video-highlight-skill/evaluation/test_cases/open_data/: cases.yaml
video-highlight-skill/evaluation/test_cases/open_data/case_001/: instruction.json  metadata.yaml
video-highlight-skill/evaluation/test_cases/open_data/case_002/: ground_truth.json  instruction.json  metadata.yaml
video-highlight-skill/evaluation/test_cases/open_data/case_003/: ground_truth.json  instruction.json  metadata.yaml
video-highlight-skill/evaluation/test_cases/open_data/case_004/: ground_truth.json  instruction.json  metadata.yaml
video-highlight-skill/evaluation/test_cases/remote/: cases.yaml
video-highlight-skill/scripts/: verify_connectivity.py  verify_dual_path.py  verify_e2e.py  verify_e2e_strict.py
video-highlight-skill/src/: ark_client.py  cost_estimator.py  highlight_detector.py  las_client.py  main.py  rule_engine.py  video_editor.py  video_fetcher.py
video-highlight-skill/tests/: test_ark_client.py  test_cost_estimator.py  test_evaluation.py  test_highlight_detector.py  test_las_client.py  test_main.py  test_rule_engine.py  test_video_editor.py  test_video_fetcher.py
(+95 files in other folders)
