[project]
name = "video-highlight-skill"
version = "0.1.0"
description = "视频高光剪辑 Skill — 基于火山引擎 OpenClaw/ArkClaw 框架"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "opencv-python>=4.9.0",
    "librosa>=0.10.0",
    "yt-dlp>=2024.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "matplotlib>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
